# vLei-Solana-Bridge

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  package.json  security.json
.github/: FUNDING.yml
idl/: attestto_vlei_sbt.json
programs/attestto-vlei-sbt/: Cargo.toml
programs/attestto-vlei-sbt/src/: lib.rs
tests/: attestto-vlei-sbt.ts
