[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Pin transitive deps to versions compatible with Solana BPF toolchain (rustc 1.79)
[workspace.dependencies]
borsh = "=1.5.5"
indexmap = "=2.7.1"
toml_edit = "=0.22.22"
proc-macro-crate = "=3.2.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

