[package]
name = "attestto-vlei-sbt"
version = "0.1.0"
description = "Attestto vLEI Soulbound Token — on-chain attestation PDA program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "attestto_vlei_sbt"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
groth16-solana = "0.1"
sha2 = "0.10"
